--- a/checkout.html
+++ b/checkout.html
@@ -13,6 +13,7 @@
             <a href="customers.html">Customers</a>
             <a href="checkout.html">Checkout</a>
           </div>
+        <h1>Checkout page</h1>
 
     </body>
 
