--- a/products.html
+++ b/products.html
@@ -13,6 +13,7 @@
             <a href="customers.html">Customers</a>
             <a href="checkout.html">Checkout</a>
           </div>
+        <h1>Products page</h1>
 
     </body>
 
