--- a/checkout.html
+++ b/checkout.html
@@ -9,9 +9,9 @@
 
     <body>
         <div class="topnav">
-            <a class="active" href="products.html">Products</a>
+            <a href="products.html">Products</a>
             <a href="customers.html">Customers</a>
-            <a href="checkout.html">Checkout</a>
+            <a class="active" href="checkout.html">Checkout</a>
           </div>
         <h1>Checkout page</h1>
 
