--- a/customers.html
+++ b/customers.html
@@ -9,8 +9,8 @@
 
     <body>
         <div class="topnav">
-            <a class="active" href="products.html">Products</a>
-            <a href="customers.html">Customers</a>
+            <a href="products.html">Products</a>
+            <a class="active" href="customers.html">Customers</a>
             <a href="checkout.html">Checkout</a>
           </div>
         <h1>Customers page</h1>
