--- a/customers.html
+++ b/customers.html
@@ -9,6 +9,7 @@
 
     <body>
         <div class="topnav">
+            <a href="index.html">Home</a>
             <a href="products.html">Products</a>
             <a class="active" href="customers.html">Customers</a>
             <a href="checkout.html">Checkout</a>
