--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 
 
     <body>
+
+        <div>
+            <h1>Welcome to GrocerKing your favourite online grocer</h1>
+        </div>
         <div class="topnav">
-            <a class="active" href="products.html">Products</a>
+            <a class="active" href="index.html">Home</a>
+            <a href="products.html">Products</a>
             <a href="customers.html">Customers</a>
             <a href="checkout.html">Checkout</a>
-          </div>
+        </div>
 
     </body>
 
