--- a/customers.html
+++ b/customers.html
@@ -8,13 +8,16 @@
 
 
     <body>
-        <div class="topnav">
-            <a href="index.html">Home</a>
-            <a href="products.html">Products</a>
-            <a class="active" href="customers.html">Customers</a>
-            <a href="checkout.html">Checkout</a>
-          </div>
         <h1>Customers page</h1>
+        <div class="navbar">
+            <ul>
+                <a href="index.html">Home</a>
+                <a class="active" href="customers.html">Customers</a>
+                <a href="products.html">Products</a>
+                <a href="checkout.html">Checkout</a>
+            </ul>
+          </div>
+        
 
     </body>
 
