--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <div>
             <h1>Welcome to GrocerKing your favourite online grocer</h1>
         </div>
-        <div class="topnav">
-            <a class="active" href="index.html">Home</a>
-            <a href="products.html">Products</a>
-            <a href="customers.html">Customers</a>
-            <a href="checkout.html">Checkout</a>
+        <div class="navbar">
+            <ul>
+                <a class="active" href="index.html">Home</a>
+                <a href="customers.html">Customers</a>
+                <a href="products.html">Products</a>
+                <a href="checkout.html">Checkout</a>
+            </ul>
         </div>
 
     </body>
