--- a/products.html
+++ b/products.html
@@ -8,13 +8,69 @@
 
 
     <body>
-        <div class="topnav">
-            <a href="index.html">Home</a>
-            <a class="active" href="products.html">Products</a>
-            <a href="customers.html">Customers</a>
-            <a href="checkout.html">Checkout</a>
-          </div>
         <h1>Products page</h1>
+        <div class="navbar">
+            <ul>
+                <a href="index.html">Home</a>
+                <a href="customers.html">Customers</a>
+                <a class="active" href="products.html">Products</a>
+                <a href="checkout.html">Checkout</a>
+            </ul>
+        </div>
+
+        <div class="products-container">
+            <div class="item">
+                <div>Banana</div>
+                <p class="price">4.99$</p>
+                <button class="select-button">Select</button>
+            </div>
+            <div class="item">
+                <div>Oatmeal</div>
+                <p class="price">2.99$</p>
+                <button class="select-button">Select</button>
+            </div>
+            <div class="item">
+                <div>Orange Juice</div>
+                <p class="price">3.99$</p>
+                <button class="select-button">Select</button>
+            </div>
+            <div class="item">
+                <div>Beef</div>
+                <p class="price">8.99$</p>
+                <button class="select-button">Select</button>
+            </div>
+            <div class="item">
+                <div>Eggs</div>
+                <p class="price">2.99$</p>
+                <button class="select-button">Select</button>
+            </div>
+            <div class="item">
+                <div>Milk</div>
+                <p class="price">3.99$</p>
+                <button class="select-button">Select</button>
+            </div>
+            <div class="item">
+                <div>Bread</div>
+                <p class="price">5.99$</p>
+                <button class="select-button">Select</button>
+            </div>
+            <div class="item">
+                <div>Lettuce</div>
+                <p class="price">1.99$</p>
+                <button class="select-button">Select</button>
+            </div>
+            <div class="item">
+                <div>Nuts</div>
+                <p class="price">6.99$</p>
+                <button class="select-button">Select</button>
+            </div>
+            <div class="item">
+                <div>Milk Chocolate</div>
+                <p class="price">3.99$</p>
+                <button class="select-button">Select</button>
+            </div>
+        </div>
+        
 
     </body>
 
