Moving "$" to front
I see "$number" more often than "number$" in most online stores

--- a/products.html
+++ b/products.html
@@ -21,52 +21,52 @@
         <div class="products-container">
             <div class="item">
                 <div>Banana</div>
-                <p class="price">4.99$</p>
+                <p class="price">$4.99</p>
                 <button class="select-button">Select</button>
             </div>
             <div class="item">
                 <div>Oatmeal</div>
-                <p class="price">2.99$</p>
+                <p class="price">$2.99</p>
                 <button class="select-button">Select</button>
             </div>
             <div class="item">
                 <div>Orange Juice</div>
-                <p class="price">3.99$</p>
+                <p class="price">$3.99</p>
                 <button class="select-button">Select</button>
             </div>
             <div class="item">
                 <div>Beef</div>
-                <p class="price">8.99$</p>
+                <p class="price">$8.99</p>
                 <button class="select-button">Select</button>
             </div>
             <div class="item">
                 <div>Eggs</div>
-                <p class="price">2.99$</p>
+                <p class="price">$2.99</p>
                 <button class="select-button">Select</button>
             </div>
             <div class="item">
                 <div>Milk</div>
-                <p class="price">3.99$</p>
+                <p class="price">$3.99</p>
                 <button class="select-button">Select</button>
             </div>
             <div class="item">
                 <div>Bread</div>
-                <p class="price">5.99$</p>
+                <p class="price">$5.99</p>
                 <button class="select-button">Select</button>
             </div>
             <div class="item">
                 <div>Lettuce</div>
-                <p class="price">1.99$</p>
+                <p class="price">$1.99</p>
                 <button class="select-button">Select</button>
             </div>
             <div class="item">
                 <div>Nuts</div>
-                <p class="price">6.99$</p>
+                <p class="price">$6.99</p>
                 <button class="select-button">Select</button>
             </div>
             <div class="item">
                 <div>Milk Chocolate</div>
-                <p class="price">3.99$</p>
+                <p class="price">$3.99</p>
                 <button class="select-button">Select</button>
             </div>
         </div>
