--- a/customers.html
+++ b/customers.html
@@ -2,7 +2,7 @@
 <html lang ="eng">
     <head>
         <meta charset="UTF-8">
-    <title>Survey</title>
+    <title>GrocerKing</title>
     <link rel="stylesheet" href="style.css">
     </head>
 
