--- a/customers.html
+++ b/customers.html
@@ -9,7 +9,7 @@
 
 
 <body>
-<h1>Preferences</h1>
+<h1 style="margin-left: 10px">Preferences</h1>
 <div class="navbar">
     <ul>
         <a href="index.html">Home</a>
