--- a/checkout.html
+++ b/checkout.html
@@ -17,7 +17,14 @@
                 <a class="active" href="checkout.html">Checkout</a>
             </ul>
           </div>
+          <div id="checkout-container">
+            <h2>Checkout</h2>
+            <ul id="selected-products-list"></ul>
+            <p>Total: $<span id="total-price">0.00</span></p>
+        </div>
         
+        <!-- Link to checkout.js -->
+        <script src="checkout.js"></script>
 
     </body>
 
