--- a/checkout.html
+++ b/checkout.html
@@ -25,7 +25,11 @@
         
         <!-- Link to checkout.js -->
         <script src="checkout.js"></script>
-
+        <footer>
+            <div class="signature">
+                created by Callum Frodsham, Dante Deslauriers, and Brian Liang
+            </div>
+        </footer>
     </body>
 
 </html>
