--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
                 <a href="checkout.html">Checkout</a>
             </ul>
         </div>
+        <h2>Select and choose products based on your restrictions and head to cheakout to view your total</h2>
 
+        <footer>
+            <div class="signature">
+                created by Callum Frodsham, Dante Deslauriers, and Brian Liang
+            </div>
+        </footer>
     </body>
-
 </html>
