--- a/customers.html
+++ b/customers.html
@@ -9,7 +9,7 @@
 
 
 <body>
-<h1 style="margin-left: 10px">Preferences</h1>
+<h1 style="margin-left: 10px">Customers preferences</h1>
 <div class="navbar">
     <ul>
         <a href="index.html">Home</a>
@@ -53,7 +53,11 @@
         </div>
     </form>
 </div>
-
+<footer>
+    <div class="signature">
+        created by Callum Frodsham, Dante Deslauriers, and Brian Liang
+    </div>
+</footer>
 </body>
 
 </html>
