--- a/products.html
+++ b/products.html
@@ -24,7 +24,11 @@
         </div>
         <!--- This script needs to be loaded after the products container otherwise this will not work! --->
         <script src="products.js"></script>
-        
+        <footer>
+            <div class="signature">
+                created by Callum Frodsham, Dante Deslauriers, and Brian Liang
+            </div>
+        </footer>
 
     </body>
 
